Wed Dec 29 09:11:54 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp:
          Use ACE::is_equal() to compare floating point values.

Wed Dec 29 08:53:31 UTC 2010  Olli Savia  <ops@iki.fi>

        * TAO_IDL/ast/ast_expression.cpp:
          Use ACE::is_equal() to compare floating point values.

Mon Dec 27 16:06:40 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_3891_Regression/Bug_3891_Regression.mpc:
        * orbsvcs/tests/Bug_3891_Regression/server.cpp:

          Link to the ImR_Client library for static builds.

Mon Dec 20 10:01:18 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
          Fixed bug#3941 and fixed broken formatting when processing sequences.

        * tests/Bug_3941_Regression/test.cpp:
        * tests/Bug_3941_Regression/test.idl:
        * tests/Bug_3941_Regression/Bug_3941_Regression.mpc:
        * tests/Bug_3941_Regression/run_test.pl:
        * tests/Bug_3941_Regression/README:
        * bin/tao_orb_tests.lst:
          Added a test for bug#3941.

Fri Dec 17 14:46:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * */*.*:
          Merged RemedyWork branch.

Wed Dec 15 12:34:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_ami_rh_exs.cpp:
        * TAO_IDL/be/be_visitor_component/component_ami_rh_exh.cpp:
         Correction for return values ami4ccm callbacks.


Wed Dec 15 11:34:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
          Layout changes to the generated code

Tue Dec 14 15:25:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

Tue Dec 14 13:13:17 CET 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.0.0 released.
